--- a/css/style.css
+++ b/css/style.css
@@ -6,26 +6,69 @@
 }
 
 
-.container {
-    width: 80%;
-    margin: 15px auto;
-}
-
-
 /* common */
 .clearfix:after {
     content: "";
     display: table;
     clear: both;
-  }
+}
 
 .m-tb {
     margin: 10px 0px;
 }
 
-
+li {
+    list-style: none;
+    display: inline-block;
+}
 
 /* inizio corpo */
+
+
+
+body{
+    background-image: url(../img/natural-pattern.png);
+}
+
+.container {
+    width: 80%;
+    margin: 15px auto;
+}
+
+.header-top {
+    background-image: url(../img/natural-header.jpg);
+    border: 10px solid white;
+    text-align: center;
+    height: 340px;
+}
+
+.header-top img {
+    width: 40%;
+}
+
+h2 {
+
+    color: white;
+}
+
+.header-menu {
+    height: 60px;
+    line-height: 60px;
+    text-align: center;
+    background-color: grey;    
+}
+
+.header-menu li {
+    margin: 0 10px;
+}
+
+.header-menu a {
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+
 
 main {
     padding: 20px 0;
@@ -71,15 +114,15 @@ main {
     height: 400px ;
 }
 
-.debug .header-top {
-    height: 340px;
-    background-color: green;
-}
+/* .debug .header-top {
 
-.debug .header-menu {
-    height: 60px;
+
+} */
+
+/* .debug .header-menu {
+
     background-color: pink;
-}
+} */
 
 .debug .main-asidesx {
     height: 200px;
